--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "drop-down-demo",
   "version": "0.1.0",
+  "main": "src/index.js",
   "bin": {
     "drop-down-demo": "bin/drop-down-demo.js"
   },
@@ -14,14 +15,16 @@
     "@types/jest": "^27.5.2",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.38.1",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
-    "aws-cdk": "2.38.1",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.241.0",
     "aws-cdk-lib": "2.38.1",
+    "aws-sdk": "^2.1287.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
