--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-events-targets": "^1.187.0",
     "@aws-sdk/client-dynamodb": "^3.241.0",
     "aws-cdk-lib": "2.38.1",
     "aws-sdk": "^2.1287.0",
